# jabberd2

./: .gitignore  Makefile.am  configure.ac
c2s/: Makefile.am
daemon/: Makefile.am  aci.c  filter.c  main.c  xmppd.h
debian/: README.Debian  README.source  changelog  control  copyright  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  jabberd2.cron.d.ex  jabberd2.default.ex  jabberd2.dirs  jabberd2.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postrm  preinst.ex  prerm.ex  rules  watch.ex
etc/: Makefile.am  c2s.xml.dist.in  jabberd.xml.dist.in  jabberd2-c2s.conf.in  jabberd2-c2s.service.in  jabberd2-router.conf.in  jabberd2-router.service.in  jabberd2-s2s.conf.in  jabberd2-s2s.service.in  jabberd2-sm.conf.in  jabberd2-sm.service.in  jabberd2.cfg.dist.in  jabberd2.in  jabberd2.service.in  router-users.xml.dist.in  router.xml.dist.in  s2s.xml.dist.in  sm.xml.dist.in
etc/templates/: Makefile.am
man/: Makefile.am  c2s.8.in  jabberd.8.in  router.8.in  s2s.8.in  sm.8.in
router/: Makefile.am
s2s/: Makefile.am
sm/: Makefile.am  mod_roster_publish.c
storage/: storage_ldapvcard.c  storage_pgsql.c
tools/: Makefile.am  jabberd.in
